--- a/public/styles.css
+++ b/public/styles.css
@@ -47,6 +47,30 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+.nicepicture-container {
+  display: none;
+  position:fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.borderpicture {
+  margin: 20px;
+  border-color: black;
+}
+
+.nicePictures {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+}
 .alert-box {
     background-color: white;
     padding: 30px;
