--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b3cccc;
+    background-color: #999;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -24,6 +24,21 @@ header {
     text-decoration: none;
     color: #000;
     justify-content: center ;
+    display: flex;
+}
+
+.Chatbutton {
+    font-family: system-ui ;
+    font-size: large;
+    background-color: #5c8a8a;
+    border-style:solid;
+    border-width: 1px;
+    border-color: #000;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 15px;
+    text-decoration: none;
+    color: #000;
     display: flex;
 }
 
@@ -109,6 +124,57 @@ header {
     padding-bottom: 10px;
 }
 
+.News {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    padding: 3px;
+    background-image: linear-gradient(to bottom, rgba(153, 153, 153, 0.7), rgba(153, 153, 153, 0.8)), url("img/banner.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.newsContent {
+    display: flex;
+    flex-direction: row;    
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+}
+.New {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 30px;
+    padding: 10px;
+    border-radius: 7px;
+    background: rgba(0,0,0,0.4);
+    height: 200px;
+    width: 300px;    
+}
+
+.New h1 {
+    color: #000;
+    font-size: 20px;
+    margin: 5px;
+}
+.New div {
+    flex-direction: row;
+    display: flex;
+}
+.New p {
+    color: #fff;
+    font-size: 20px;
+    margin: 5px;
+}
+.newspic{
+    overflow: hidden;
+    height: 400px;
+    width: 270px;
+    border-radius: 7px;
+    background-color: rgba(0,0,0,0.405);
+} 
+
 .picture {
     height: auto;
     width: 500px;
@@ -148,7 +214,7 @@ header {
 }
 
 .newPic {
-    background-color: #66999999;
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 10px;
     width: 503px;
     height: auto;
@@ -161,14 +227,18 @@ header {
     color: #fff;
     height:300px;
     width: 320px;
-    position: absolute;
-    top: 150px;
-    right: 60px;
     padding: 10px;
     border-radius: 10px;
     font-size: 15px;
     flex-direction: column;
     box-shadow: 10px, 10px;
+    display: none;
+}
+.terminall Button {
+    background-color: #000;
+    border-style: none;
+    margin: 5px;
+    flex-direction: left;
 }
 .overflowScroll {
     overflow: scroll;
